--- a/css/style.less
+++ b/css/style.less
@@ -5,8 +5,7 @@ html {
   font-size: 15px;
 }
 body {
-  color: @black;
-  font-family: "Poppins", sans-serif;
+  font-family: 'Open Sans', sans-serif;
   font-size: 1rem;
   -webkit-font-smoothing: antialiased;
   color: @black;
@@ -37,32 +36,9 @@ a {
   }
 }
 /*vendor*/
-@import "vendor/slick.less";
-@import "vendor/waves.less";
-@import "vendor/animate.less";
+
 /*blocks*/
 @import "block/container.less";
-@import "block/header.less";
-@import "block/nav.less";
-@import "block/burger.less";
-@import "block/btn.less";
-@import "block/intro.less";
-@import "block/wellcome.less";
-@import "block/header__title.less";
-@import "block/features.less";
-@import "block/progress.less";
-@import "block/about.less";
-@import "block/acardeon.less";
-@import "block/shedule.less";
-@import "block/menu.less";
-@import "block/stuff.less";
-@import "block/video.less";
-@import "block/event.less";
-@import "block/feedback.less";
-@import "block/subscribe.less";
-@import "block/blog.less";
-@import "block/contact.less";
-@import "block/footer.less";
-@import "block/back__top.less";
+@import "block/header__top.less";
 /*Helpers*/
 @import "help.less";
