--- a/css/vars.less
+++ b/css/vars.less
@@ -2,15 +2,13 @@
 /*color*/
 @black: #000000;
 @white: #ffffff;
-@blue: #00c5d2;
-@red: #ff3a2d;
-@red-l:#ffe8e7;
-@gray: #1c1c1c;
-@gray-l: #808080;
+@blue: #1a9bdc;
+@green: #2eb39b;
+@green-l:#37c3a8;
+@gray: #494949;
+@gray-l: #c7c7c7;
 /*fonts*/
-@lobster: 'Lobster Two', cursive;
-@sacramento: 'Sacramento', cursive;
-@releway: 'Raleway', sans-serif;
+@monserat: 'Montserrat', sans-serif;
 /*media brackpoint*/
 @mobile-sm: ~"(max-width:570px)";
 @mobile: ~"(max-width:767px)";
