create nav menu

--- a/css/block/header__top.less
+++ b/css/block/header__top.less
@@ -59,6 +59,7 @@
     color: rgba(@gray, 0.8);
     font-size: 1.1rem;
     font-weight: 700;
+    font-family: @monserat;
   }
   a {
     text-decoration: none;
@@ -73,5 +74,9 @@
     font-size: 0.9rem;
     -webkit-transition: color 0.2s ease-in-out;
     transition: color 0.2s ease-in-out;
+    &:hover{
+      color: rgba(@gray, 1);
+      cursor: pointer;
+    }
   }
 }
