--- a/css/style.less
+++ b/css/style.less
@@ -36,9 +36,14 @@ a {
   }
 }
 /*vendor*/
-
+/*animate css https://daneden.github.io/animate.css/*/
+@import "vendor/animate.less";
 /*blocks*/
+/*Container*/
 @import "block/container.less";
+/*Header top*/
 @import "block/header__top.less";
+/*nav__bar*/
+@import "block/nav.less";
 /*Helpers*/
 @import "help.less";
