--- a/css/style.less
+++ b/css/style.less
@@ -36,6 +36,8 @@ a {
   }
 }
 /*vendor*/
+/*normalize css https://necolas.github.io/normalize.css/*/
+@import "vendor/normalize.less";
 /*animate css https://daneden.github.io/animate.css/*/
 @import "vendor/animate.less";
 /*blocks*/
@@ -45,5 +47,7 @@ a {
 @import "block/header__top.less";
 /*nav__bar*/
 @import "block/nav.less";
+/*intro*/
+@import "block/intro.less";
 /*Helpers*/
 @import "help.less";
