--- a/css/style.less
+++ b/css/style.less
@@ -51,5 +51,7 @@ a {
 @import "block/intro.less";
 /*btn*/
 @import "block/btn.less";
+/*services*/
+@import "block/services.less";
 /*Helpers*/
 @import "help.less";
