create header section

--- a/css/style.less
+++ b/css/style.less
@@ -53,5 +53,9 @@ a {
 @import "block/btn.less";
 /*services*/
 @import "block/services.less";
+/*section__header*/
+@import "block/section__header.less";
+/*choose__us*/
+@import "block/choose__us.less";
 /*Helpers*/
 @import "help.less";
