create section why choose us

--- a/css/block/choose__us.less
+++ b/css/block/choose__us.less
@@ -1,1 +1,49 @@
 //main: ../style.less
+.us__content {
+  margin-top: 3rem;
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-pack: justify;
+  justify-content: space-between;
+}
+.us__colum {
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  flex-direction: column;
+  padding: 0 2rem;
+  p {
+    font-size: 1.1rem;
+    color: rgba(@gray, 0.8);
+    line-height: 1.875;
+  }
+}
+.colum__item {
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-align: center;
+  align-items: center;
+  margin-top: 3rem;
+  margin-bottom: 1rem;
+  span {
+    width: 3rem;
+    height: 3rem;
+    background-color: @blue;
+    border-radius: 50%;
+    text-align: center;
+    line-height: 50px;
+    margin-right: 1rem;
+    i {
+      color: @white;
+      font-size: 1.3rem;
+    }
+  }
+  h4 {
+    font-size: 2.3rem;
+    font-family: @monserat;
+    color: @gray;
+    font-weight: 700;
+    line-height: 1.2;
+  }
+}
