--- a/css/block/choose__us.less
+++ b/css/block/choose__us.less
@@ -12,11 +12,15 @@
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
   flex-direction: column;
-  padding: 0 2rem;
+  /*padding: 0 2rem;*/
+  width: 42%;
   p {
     font-size: 1.1rem;
     color: rgba(@gray, 0.8);
     line-height: 1.875;
+  }
+  &--img{
+    width: 16%;
   }
 }
 .colum__item {
@@ -29,11 +33,16 @@
   span {
     width: 3rem;
     height: 3rem;
-    background-color: @blue;
+    /*background-color: @blue;*/
     border-radius: 50%;
     text-align: center;
     line-height: 50px;
     margin-right: 1rem;
+    animation-name: spanBG;
+    animation-duration: 3s;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease-in-out; 
+    transition: background-color 0.3s ease-in-out;
     i {
       color: @white;
       font-size: 1.3rem;
@@ -45,5 +54,22 @@
     color: @gray;
     font-weight: 700;
     line-height: 1.2;
+  }
+}
+@keyframes spanBG{
+  0%{
+    background-color: #1dd1ad;
+  }
+  25%{
+    background-color: #2db0c2;
+  }
+  50%{
+    background-color: #27a3a3;
+  }
+  75%{
+    background-color: #37c3a8;
+  }
+  100%{
+    background-color: #1dd1ad;
   }
 }
