create block best feature

--- a/css/block/choose__us.less
+++ b/css/block/choose__us.less
@@ -12,15 +12,15 @@
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
   flex-direction: column;
-  /*padding: 0 2rem;*/
-  width: 42%;
+  padding: 0 2rem;
   p {
     font-size: 1.1rem;
     color: rgba(@gray, 0.8);
     line-height: 1.875;
   }
   &--img{
-    width: 16%;
+    margin: 0 1rem;
+    margin-left: -1.5rem;
   }
 }
 .colum__item {
@@ -28,12 +28,11 @@
   display: flex;
   -webkit-box-align: center;
   align-items: center;
-  margin-top: 3rem;
+  margin-top: 4rem;
   margin-bottom: 1rem;
   span {
     width: 3rem;
     height: 3rem;
-    /*background-color: @blue;*/
     border-radius: 50%;
     text-align: center;
     line-height: 50px;
