--- a/css/style.less
+++ b/css/style.less
@@ -57,5 +57,7 @@ a {
 @import "block/section__header.less";
 /*choose__us*/
 @import "block/choose__us.less";
+/*best__feature*/
+@import "block/beast__feature.less";
 /*Helpers*/
 @import "help.less";
