create how we work section

--- a/css/style.less
+++ b/css/style.less
@@ -59,5 +59,7 @@ a {
 @import "block/choose__us.less";
 /*best__feature*/
 @import "block/beast__feature.less";
+/*we__work*/
+@import "block/we__work.less";
 /*Helpers*/
 @import "help.less";
