--- a/css/block/we__work.less
+++ b/css/block/we__work.less
@@ -1,12 +1,17 @@
 //main: ../style.less
 .work__content {
   margin: 6rem 0;
+  display: -webkit-box;
   display: flex;
+  -webkit-box-pack: justify;
   justify-content: space-between;
 }
 .colum__left {
   width: 60%;
+  display: -webkit-box;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
   flex-direction: column;
 }
 .colum__left--header {
@@ -27,12 +32,17 @@
 }
 .colum__left--content {
   margin-top: 2rem;
+  display: -webkit-box;
   display: flex;
+  -webkit-box-pack: justify;
   justify-content: space-between;
 }
 .colum__left--colum {
+  display: -webkit-box;
   display: flex;
   width: 40%;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
   flex-direction: column;
   h4 {
     margin-top: 2rem;
@@ -56,4 +66,79 @@
     line-height: 1.5;
     color: rgba(@gray, 0.8);
   }
+}
+.colum__right {
+  width: 35%;
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  flex-direction: column;
+  h2 {
+    font-size: 4rem;
+    font-family: @monserat;
+    color: @gray;
+    font-weight: 700;
+    line-height: 1.2;
+    margin-bottom: 1rem;
+  }
+  h3 {
+    font-size: 1.1rem;
+    color: rgba(@gray, 0.8);
+    line-height: 1.3;
+    font-weight: 400;
+  }
+}
+.right__acardeon {
+  list-style: none;
+  padding: 0;
+  margin-top: 3rem;
+}
+.acardeon__content {
+  width: 100%;
+}
+.acardeon__header {
+  width: 100%;
+  height: 3rem;
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-align: center;
+  align-items: center;
+  border-radius: 35px;
+  background: @gray-l;
+  box-shadow: 0 0 10px @gray-l;
+  span {
+    background: @white;
+    width: 2.5rem;
+    height: 2.5rem;
+    border-radius: 50%;
+    text-align: center;
+    line-height: 44px;
+    margin-left: 0.5rem;
+    i {
+      color: @blue;
+      font-size: 1.5rem;
+      -webkit-transition: -webkit-transform 0.1s ease-in-out;
+      transition: -webkit-transform 0.1s ease-in-out;
+      transition: transform 0.1s ease-in-out;
+      transition: transform 0.1s ease-in-out, -webkit-transform 0.1s ease-in-out;
+    }
+  }
+  &:hover {
+    cursor: pointer;
+    span {
+      margin-left: 2rem;
+      i {
+        -webkit-transform: rotate(90deg);
+        transform: rotate(90deg);
+      }
+    }
+  }
+}
+.acardeon__body {
+  font-size: 1.1rem;
+  font-weight: 400;
+  color: rgba(@gray, 0.8);
+  line-height: 1.4;
+  margin: 1rem 0;
 }
