--- a/css/block/we__work.less
+++ b/css/block/we__work.less
@@ -116,27 +116,43 @@
     text-align: center;
     line-height: 44px;
     margin-left: 0.5rem;
+    transition: box-shadow 0.3s ease-in-out;
     i {
       color: @blue;
       font-size: 1.5rem;
-      -webkit-transition: -webkit-transform 0.1s ease-in-out;
-      transition: -webkit-transform 0.1s ease-in-out;
-      transition: transform 0.1s ease-in-out;
-      transition: transform 0.1s ease-in-out, -webkit-transform 0.1s ease-in-out;
+      -webkit-transition: -webkit-transform 0.3s ease-in-out;
+      transition: -webkit-transform 0.3s ease-in-out;
+      transition: transform 0.3s ease-in-out;
+      transition: transform 0.3s ease-in-out, -webkit-transform 0.3s ease-in-out;
     }
+  }
+  p {
+    font-size: 1.4rem;
+    font-family: @monserat;
+    color: @gray;
+    font-weight: 400;
+    margin-left: 2rem;
   }
   &:hover {
     cursor: pointer;
     span {
-      margin-left: 2rem;
+      box-shadow: 0 0 10px @white;
       i {
         -webkit-transform: rotate(90deg);
         transform: rotate(90deg);
       }
     }
   }
+  &--active{
+    background: @blue;
+    box-shadow: 0 0 10px @blue;
+    p{
+      color: @white;
+    }
+  }
 }
 .acardeon__body {
+  display: none;
   font-size: 1.1rem;
   font-weight: 400;
   color: rgba(@gray, 0.8);
