create gallery section

--- a/css/style.less
+++ b/css/style.less
@@ -61,5 +61,7 @@ a {
 @import "block/beast__feature.less";
 /*we__work*/
 @import "block/we__work.less";
+/*gallery*/
+@import "block/gallery.less";
 /*Helpers*/
 @import "help.less";
