abb vendor lightbox

--- a/css/style.less
+++ b/css/style.less
@@ -36,10 +36,12 @@ a {
   }
 }
 /*vendor*/
-/*normalize css https://necolas.github.io/normalize.css/*/
+/*normalize css https://necolas.github.io/normalize.css/ */
 @import "vendor/normalize.less";
-/*animate css https://daneden.github.io/animate.css/*/
+/*animate css https://daneden.github.io/animate.css/ */
 @import "vendor/animate.less";
+/*lightbox https://lokeshdhakar.com/projects/lightbox2/ */
+@import "vendor/lightbox.less";
 /*blocks*/
 /*Container*/
 @import "block/container.less";
