--- a/css/block/we__work.less
+++ b/css/block/we__work.less
@@ -116,6 +116,7 @@
     text-align: center;
     line-height: 44px;
     margin-left: 0.5rem;
+    -webkit-transition: box-shadow 0.3s ease-in-out;
     transition: box-shadow 0.3s ease-in-out;
     i {
       color: @blue;
@@ -143,10 +144,10 @@
       }
     }
   }
-  &--active{
+  &--active {
     background: @blue;
     box-shadow: 0 0 10px @blue;
-    p{
+    p {
       color: @white;
     }
   }
