--- a/css/style.less
+++ b/css/style.less
@@ -65,5 +65,7 @@ a {
 @import "block/we__work.less";
 /*gallery*/
 @import "block/gallery.less";
+/*team*/
+@import "block/team.less";
 /*Helpers*/
 @import "help.less";
