create quck action block

--- a/css/style.less
+++ b/css/style.less
@@ -67,5 +67,7 @@ a {
 @import "block/gallery.less";
 /*team*/
 @import "block/team.less";
+/*action*/
+@import "block/action.less";
 /*Helpers*/
 @import "help.less";
