create footer section

--- a/css/block/btn.less
+++ b/css/block/btn.less
@@ -19,4 +19,15 @@
     border: 3px solid @blue;
     box-shadow: 0 0 5px @blue;
   }
+  &--submit {
+    border: none;
+    padding: 0.5rem 1rem;
+    width: 40%;
+    &:active {
+      outline: none;
+    }
+    &:focus {
+      outline: none;
+    }
+  }
 }
