--- a/css/style.less
+++ b/css/style.less
@@ -69,5 +69,7 @@ a {
 @import "block/team.less";
 /*action*/
 @import "block/action.less";
+/*footer*/
+@import "block/footer.less";
 /*Helpers*/
 @import "help.less";
