--- a/css/block/services.less
+++ b/css/block/services.less
@@ -2,27 +2,35 @@
 .services__content {
   width: 100%;
   height: 23rem;
+  display: -webkit-box;
   display: flex;
 }
 .services__colum {
   width: 25%;
+  display: -webkit-box;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
   flex-direction: column;
+  -webkit-box-pack: center;
   justify-content: center;
+  -webkit-box-align: center;
   align-items: center;
   padding: 0 2rem;
   text-align: center;
+  -webkit-transition: background-color 0.3s ease-in-out;
+  transition: background-color 0.3s ease-in-out;
   &--1 {
     background-color: @blue;
   }
   &--2 {
-      background-color: #3fb6c6;
+    background-color: #3fb6c6;
   }
   &--3 {
-      background-color: #3cbbbb;
+    background-color: #3cbbbb;
   }
   &--4 {
-      background-color: #37c3a8;
+    background-color: #37c3a8;
   }
   span {
     width: 3rem;
@@ -32,6 +40,8 @@
     margin-bottom: 1rem;
     text-align: center;
     line-height: 50px;
+    -webkit-transition: background-color 0.3s ease-in-out;
+    transition: background-color 0.3s ease-in-out;
     i {
       font-size: 1.5rem;
     }
@@ -43,11 +53,27 @@
     font-weight: 700;
     line-height: 1.2;
     margin-bottom: 1rem;
+    -webkit-transition: color 0.3s ease-in-out;
+    transition: color 0.3s ease-in-out;
   }
   p {
     font-size: 1.1rem;
     color: @white;
     line-height: 1.1;
     font-weight: 400;
+    -webkit-transition: color 0.3s ease-in-out;
+    transition: color 0.3s ease-in-out;
+  }
+  &:hover {
+    background-color: @white;
+    span {
+      background-color: @blue;
+    }
+    h3 {
+      color: @blue;
+    }
+    p {
+      color: @blue;
+    }
   }
 }
