--- a/css/block/footer.less
+++ b/css/block/footer.less
@@ -118,3 +118,38 @@
     }
   }
 }
+.footer__social {
+  margin-top: 3rem;
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-align: center;
+  align-items: center;
+  -webkit-box-pack: start;
+  justify-content: flex-start;
+  a {
+    margin: 0 1rem;
+    width: 3rem;
+    height: 3rem;
+    display: block;
+    background-color: @blue;
+    border-radius: 50%;
+    text-align: center;
+    line-height: 50px;
+    -webkit-transition: box-shadow 0.3s ease-in-out,
+      background-color 0.3s ease-in-out;
+    transition: box-shadow 0.3s ease-in-out, background-color 0.3s ease-in-out;
+    i {
+      color: @white;
+      font-size: 1.3rem;
+      -webkit-transition: color 0.3s ease-in-out;
+      transition: color 0.3s ease-in-out;
+    }
+    &:hover {
+      background-color: @white;
+      box-shadow: 0 0 10px @white;
+      i {
+        color: @blue;
+      }
+    }
+  }
+}
