--- a/css/block/footer.less
+++ b/css/block/footer.less
@@ -120,6 +120,7 @@
 }
 .footer__social {
   margin-top: 3rem;
+  padding-bottom: 3rem;
   display: -webkit-box;
   display: flex;
   -webkit-box-align: center;
@@ -137,6 +138,8 @@
     line-height: 50px;
     -webkit-transition: box-shadow 0.3s ease-in-out,
       background-color 0.3s ease-in-out;
+    -webkit-transition: box-shadow 0.3s ease-in-out,
+      background-color 0.3s ease-in-out;
     transition: box-shadow 0.3s ease-in-out, background-color 0.3s ease-in-out;
     i {
       color: @white;
@@ -151,5 +154,22 @@
         color: @blue;
       }
     }
+  }
+}
+.footer__copyright {
+  width: 100%;
+  height: 4rem;
+  background-color: @gray;
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  align-items: center;
+  p {
+    color: rgba(@white, 0.8);
+    font-size: 1.1rem;
+    font-weight: 400;
+    font-family: @monserat;
   }
 }
