finished section our__services

--- a/css/style.less
+++ b/css/style.less
@@ -5,7 +5,7 @@ html {
   font-size: 15px;
 }
 body {
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Raleway', sans-serif;
   font-size: 1rem;
   -webkit-font-smoothing: antialiased;
   color: @black;
@@ -63,6 +63,8 @@ a {
 @import "block/beast__feature.less";
 /*we__work*/
 @import "block/we__work.less";
+/*our__services*/
+@import "block/our__services.less";
 /*gallery*/
 @import "block/gallery.less";
 /*team*/
