--- a/css/block/our__services.less
+++ b/css/block/our__services.less
@@ -1,1 +1,58 @@
 //main: ../style.less
+.our__sevices__content {
+  display: -webkit-box;
+  display: flex;
+  width: 100%;
+  margin-top: 4rem;
+  margin-bottom: 1rem;
+  flex-wrap: wrap;
+  -webkit-box-pack: justify;
+  justify-content: space-between;
+  -webkit-box-align: start;
+  align-items: flex-start;
+}
+.our__sevices__colum {
+  width: 30%;
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  flex-direction: column;
+  -webkit-box-align: center;
+  align-items: center;
+  text-align: center;
+  margin-bottom: 3rem;
+  i {
+    color: @blue;
+    font-size: 2.5rem;
+    margin-bottom: 1rem;
+  }
+  h4 {
+    font-size: 1.5rem;
+    font-family: @monserat;
+    color: @gray;
+    font-weight: 700;
+    line-height: 1.2;
+    margin-bottom: 1rem;
+  }
+  p {
+    font-size: 1.1rem;
+    color: rgba(@gray, 0.8);
+    line-height: 1.875;
+    font-weight: 400;
+  }
+  &:after {
+    content: "";
+    display: block;
+    width: 0;
+    height: 3px;
+    background-color: @blue;
+    -webkit-transition: width 0.6s linear;
+    transition: width 0.6s linear;
+  }
+  &:hover {
+    &:after {
+      width: 100%;
+    }
+  }
+}
