create fixed header

--- a/css/block/header__top.less
+++ b/css/block/header__top.less
@@ -1,5 +1,13 @@
 //main: ../style.less
-
+.fixed{
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 99;
+    background-color: rgba(@white, 1);
+    transition: all 0.5s ease-in-out;
+}
 .header__top {
   margin-top: 1rem;
   display: -webkit-box;
