finished fixed header

--- a/css/block/header__top.less
+++ b/css/block/header__top.less
@@ -5,11 +5,10 @@
     left: 0;
     right: 0;
     z-index: 99;
+    box-shadow: 0 0 20px @white;
     background-color: rgba(@white, 1);
-    transition: all 0.5s ease-in-out;
 }
 .header__top {
-  margin-top: 1rem;
   display: -webkit-box;
   display: flex;
   -webkit-box-align: center;
