--- a/css/block/nav.less
+++ b/css/block/nav.less
@@ -8,6 +8,7 @@
   justify-content: space-between;
   width: 100%;
   height: 3.1rem;
+  margin-top: 0.5rem;
 }
 .nav__menu {
   list-style-type: none;
