create progress bar

--- a/css/style.less
+++ b/css/style.less
@@ -45,6 +45,8 @@ a {
 /*blocks*/
 /*Container*/
 @import "block/container.less";
+/*progress__bar*/
+@import "block/progress__bar.less";
 /*Header top*/
 @import "block/header__top.less";
 /*nav__bar*/
