add hover icon to gallery img

--- a/css/block/gallery.less
+++ b/css/block/gallery.less
@@ -19,5 +19,25 @@
     width: 30%;
     margin: 1rem;
     text-decoration: none;
+    position: relative;
+    &:after{
+      content: "";
+      background: transparent url(../img/gallery/icon/eye-icon.png) no-repeat
+        center;
+      position: absolute;
+      z-index: 2;
+      margin: auto;
+      top: 0;
+      left: 0;
+      bottom: 0;
+      right: 0;
+      visibility: hidden;
+      transition: visibility 0.4s linear;
+    }
+    &:hover{
+      &:after{
+        visibility: visible;
+      }
+    }
   }
 }
