--- a/css/block/header__top.less
+++ b/css/block/header__top.less
@@ -79,6 +79,7 @@
   }
   p {
     color: rgba(@gray, 0.6);
+    font-family: @monserat;
     font-size: 0.9rem;
     -webkit-transition: color 0.2s ease-in-out;
     transition: color 0.2s ease-in-out;
