--- a/css/help.less
+++ b/css/help.less
@@ -28,7 +28,7 @@
 .mt-2 {
   margin-top: 2rem;
 }
-.zoomIn {
+.zoomInn {
   -webkit-transition: -webkit-transform 0.4s linear;
   transition: -webkit-transform 0.4s linear;
   transition: transform 0.4s linear;
@@ -38,7 +38,7 @@
     transform: scale(0.9);
   }
 }
-.zoomOut {
+.zoomOutt {
   -webkit-transition: -webkit-transform 0.4s linear;
   transition: -webkit-transform 0.4s linear;
   transition: transform 0.4s linear;
