--- a/css/block/footer.less
+++ b/css/block/footer.less
@@ -49,6 +49,7 @@
     margin-bottom: 0.5rem;
     font-size: 1rem;
     font-weight: 400;
+    font-family: @monserat;
     &:last-child {
       margin-bottom: 0;
     }
