create burger button

--- a/css/style.less
+++ b/css/style.less
@@ -49,6 +49,8 @@ a {
 @import "block/progress__bar.less";
 /*Header top*/
 @import "block/header__top.less";
+/*burger__button*/
+@import "block/burger__button.less";
 /*nav__bar*/
 @import "block/nav.less";
 /*intro*/
