--- a/css/block/header__top.less
+++ b/css/block/header__top.less
@@ -17,6 +17,7 @@
   justify-content: space-between;
   width: 100%;
   position: relative;
+  padding-bottom: 0.3rem;
   &::after {
     content: "";
     position: absolute;
@@ -25,6 +26,9 @@
     width: 100%;
     height: 2px;
     background: rgba(@gray-l, 0.6);
+    @media @tablet{
+      display: none;
+    }
   }
 }
 .header__content {
@@ -32,6 +36,9 @@
   display: flex;
   -webkit-box-align: center;
   align-items: center;
+  @media @tablet{
+    display: none;
+  }
 }
 .content__item {
   display: -webkit-box;
@@ -58,6 +65,9 @@
       color: @white;
       font-size: 1.5rem;
     }
+  }
+  @media @notebook{
+    margin-right: 2rem;
   }
 }
 .item__text {
