--- a/css/block/nav.less
+++ b/css/block/nav.less
@@ -9,6 +9,9 @@
   width: 100%;
   height: 3.1rem;
   margin-top: 0.5rem;
+  @media @tablet{
+    display: none;
+  }
 }
 .nav__menu {
   list-style-type: none;
@@ -35,6 +38,9 @@
     &::after {
       width: 100%;
     }
+  }
+  @media @notebook{
+    margin: 0 1rem;
   }
 }
 .nav__link {
