fixed semantic html

--- a/css/style.less
+++ b/css/style.less
@@ -1,11 +1,13 @@
 // compress: true
 @import "vars.less";
+/*google fonts*/
+@import url("https://fonts.googleapis.com/css?family=Montserrat:400,600,700|Raleway:400,600,700&display=swap&subset=latin-ext");
 
 html {
   font-size: 15px;
 }
 body {
-  font-family: 'Raleway', sans-serif;
+  font-family: "Raleway", sans-serif;
   font-size: 1rem;
   -webkit-font-smoothing: antialiased;
   color: @black;
