create page about

--- a/css/help.less
+++ b/css/help.less
@@ -13,6 +13,10 @@
 .text__center {
   text-align: center;
 }
+.text__bold{
+  color: @gray;
+  font-weight: 700;
+}
 .mt-6 {
   margin-top: 6rem;
 }
