create page contact(but not finished)

--- a/css/style.less
+++ b/css/style.less
@@ -79,6 +79,8 @@ a {
 @import "block/team.less";
 /*action*/
 @import "block/action.less";
+/*contactForm*/
+@import "block/contactForm.less";
 /*footer*/
 @import "block/footer.less";
 /*back__top button*/
