--- a/css/block/contactForm.less
+++ b/css/block/contactForm.less
@@ -1,22 +1,22 @@
 //main: ../style.less
-.contact__content{
-  margin: 4rem 0;
+.contact__content {
+  margin: 5rem 0;
   display: flex;
   align-items: flex-start;
   justify-content: space-around;
 }
-.form__colum{
-  width: 50%;
+.contact__form__colum {
+  width: 55%;
 }
-.form__hader{
-  h2{
+.form__hader {
+  h2 {
     font-family: @monserat;
     font-size: 2.5rem;
     color: @gray;
     font-weight: 700;
     margin-bottom: 1rem;
   }
-  h3{
+  h3 {
     font-family: @monserat;
     font-size: 1.1rem;
     color: @gray;
@@ -24,30 +24,54 @@
     margin-bottom: 1rem;
   }
 }
-.form__send{
-  input{
-    border-bottom: 2px solid #000;
-    background-color: red;
-    margin-bottom: 1rem;
+.form__send {
+  display: flex;
+  flex-direction: column;
+  input {
+    width: 100%;
+    height: 2.7rem;
+    border: none;
+    border-bottom: 1px solid rgba(@gray, 0.7);
+    color: @gray;
+    margin-bottom: 2rem;
+    padding-left: 1rem;
+    &:focus {
+      outline: none;
+      border-bottom: 1px solid rgba(@green, 1);
+    }
   }
-  textarea{
-    border-bottom: 3px solid red;
+  textarea {
+    width: 100%;
+    height: 4rem;
+    border: none;
+    border-bottom: 1px solid rgba(@gray, 0.7);
+    color: @gray;
+    margin-bottom: 2rem;
+    padding-left: 1rem;
+    resize: none;
+    &:focus {
+      outline: none;
+      border-bottom: 1px solid rgba(@green, 1);
+    }
+  }
+  button{
+    width: 18%;
   }
 }
-.location__colum{
+.location__colum {
   width: 35%;
 }
-.location__content{
+.location__content {
   height: 6rem;
   width: 100%;
   border: 1px solid @gray-l;
-  margin-bottom: 1rem;
+  margin-bottom: 2rem;
   background-color: rgba(@gray-l, 0.6);
   border-radius: 5px;
   display: flex;
   justify-content: center;
   align-items: center;
-  span{
+  span {
     width: 3rem;
     height: 3rem;
     background-color: @white;
@@ -55,9 +79,26 @@
     text-align: center;
     line-height: 50px;
     margin-right: 1.5rem;
-    i{
+    i {
       font-size: 1.3rem;
       color: @green-l;
+    }
+  }
+  h4 {
+    font-family: @monserat;
+    font-size: 1.2rem;
+    font-weight: 600;
+    color: @gray;
+    margin-bottom: 0.5rem;
+  }
+  p{
+    font-family: @monserat;
+    font-size: 0.8rem;
+    font-weight: 400;
+    color: @gray;
+    margin-bottom: 0.5rem;
+    &:last-child{
+      margin-bottom: 0;
     }
   }
 }
