finished contact page

--- a/css/style.less
+++ b/css/style.less
@@ -85,5 +85,7 @@ a {
 @import "block/back__top.less";
 /*contactForm*/
 @import "block/contactForm.less";
+/*map*/
+@import "block/map.less";
 /*Helpers*/
 @import "help.less";
