--- a/css/block/btn.less
+++ b/css/block/btn.less
@@ -13,6 +13,10 @@
     border 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
   transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out,
     border 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
+    @media @mobile{
+      font-size: 0.9rem;
+      padding: 0.5rem 0.5rem;
+    }
   &:hover {
     background-color: transparent;
     color: @blue;
@@ -29,7 +33,7 @@
     &:focus {
       outline: none;
     }
-    &:hover{
+    &:hover {
       border: 1px solid @blue;
     }
   }
