--- a/css/block/intro.less
+++ b/css/block/intro.less
@@ -15,6 +15,16 @@
   @media (min-width: 1420px) {
     top: 25%;
   }
+  @media @tablet{
+    width: 55%;
+  }
+  @media @mobile{
+    width: 60%;
+    top: 5%;
+  }
+  @media @mobile-sm{
+    width: 100%;
+  }
 }
 .intro__title {
   font-size: 3.2rem;
@@ -23,6 +33,22 @@
   line-height: 1.2;
   font-weight: 400;
   margin-bottom: 2rem;
+  @media @notebook{
+    font-size: 2.8rem;
+    margin-bottom: 1.7rem;
+  }
+  @media @tablet{
+    font-size: 2rem;
+    margin-bottom: 1.3rem;  
+  }
+  @media @mobile{
+    font-size: 1.4rem;
+    margin-bottom: 1rem;
+  }
+  @media @mobile-sm{
+    font-size: 1rem;
+    margin-bottom: 0.5rem;
+  }
 }
 .intro__subtitle {
   font-size: 1.1rem;
@@ -30,4 +56,16 @@
   line-height: 1.765;
   font-weight: 400;
   margin-bottom: 2rem;
+  @media @tablet{
+    font-size: 0.9rem;
+    margin-bottom: 1.3rem;
+  }
+  @media @mobile{
+    font-size: 0.8rem;
+    margin-bottom: 1rem;
+  }
+  @media @mobile-sm{
+    font-size: 0.7rem;
+    margin-bottom: 0.5rem;
+  }
 }
