--- a/css/help.less
+++ b/css/help.less
@@ -19,6 +19,12 @@
 }
 .mt-6 {
   margin-top: 6rem;
+  @media @tablet{
+    margin-top: 4rem;
+  }
+  @media @mobile{
+    margin-top: 2rem;
+  }
 }
 .mt-5 {
   margin-top: 5rem;
