--- a/css/block/choose__us.less
+++ b/css/block/choose__us.less
@@ -5,24 +5,41 @@
   display: flex;
   -webkit-box-pack: justify;
   justify-content: space-between;
+  @media @tablet {
+    flex-wrap: wrap;
+    -webkit-box-pack: center;
+    justify-content: center;
+    margin-bottom: 1rem;
+    margin-top: 1rem;
+  }
 }
 .us__colum {
   display: -webkit-box;
   display: flex;
+  width: 35%;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
   flex-direction: column;
   padding: 0 2rem;
+  @media @tablet {
+    width: 100%;
+    padding: 0;
+  }
   p {
     font-size: 1.1rem;
     color: rgba(@gray, 0.8);
     line-height: 1.875;
+    @media @notebook {
+      line-height: 1.5;
+      font-size: 1rem;
+    }
     &::after {
       content: "";
       display: block;
       width: 0;
       height: 3px;
       background-color: @blue;
+      -webkit-transition: width 0.5s linear;
       transition: width 0.5s linear;
     }
     &:hover {
@@ -34,6 +51,10 @@
   &--img {
     margin: 0 1rem;
     margin-left: -1.5rem;
+    width: 25%;
+    @media @tablet {
+      display: none;
+    }
   }
 }
 .colum__item {
@@ -41,8 +62,18 @@
   display: flex;
   -webkit-box-align: center;
   align-items: center;
-  margin-top: 4rem;
+  margin-top: 2rem;
   margin-bottom: 1rem;
+  @media (min-width: 1420px) {
+    margin-top: 4rem;
+  }
+  @media @notebook {
+    margin-top: 1rem;
+    margin-bottom: 0;
+  }
+  @media @tablet {
+    margin-bottom: 0.5rem;
+  }
   span {
     width: 3rem;
     height: 3rem;
@@ -50,10 +81,15 @@
     text-align: center;
     line-height: 50px;
     margin-right: 1rem;
+    -webkit-animation-name: spanBG;
     animation-name: spanBG;
+    -webkit-animation-duration: 3s;
     animation-duration: 3s;
+    -webkit-animation-iteration-count: infinite;
     animation-iteration-count: infinite;
+    -webkit-animation-timing-function: ease-in-out;
     animation-timing-function: ease-in-out;
+    -webkit-transition: background-color 0.3s ease-in-out;
     transition: background-color 0.3s ease-in-out;
     i {
       color: @white;
@@ -66,6 +102,23 @@
     color: @gray;
     font-weight: 700;
     line-height: 1.2;
+  }
+}
+@-webkit-keyframes spanBG {
+  0% {
+    background-color: #1dd1ad;
+  }
+  25% {
+    background-color: #2db0c2;
+  }
+  50% {
+    background-color: #27a3a3;
+  }
+  75% {
+    background-color: #37c3a8;
+  }
+  100% {
+    background-color: #1dd1ad;
   }
 }
 @keyframes spanBG {
