--- a/css/block/section__header.less
+++ b/css/block/section__header.less
@@ -2,6 +2,12 @@
 .section__header {
   width: 60%;
   margin: 0 auto;
+  @media @tablet {
+    width: 80%;
+  }
+  @media @mobile {
+    width: 100%;
+  }
   h2 {
     font-size: 3rem;
     font-family: @monserat;
@@ -9,10 +15,27 @@
     font-weight: 700;
     line-height: 1.2;
     margin-bottom: 2rem;
+    @media @tablet {
+      font-size: 2.5rem;
+      margin-bottom: 1.5rem;
+    }
+    @media @mobile {
+      font-size: 2rem;
+      margin-bottom: 1rem;
+    }
+    @media @mobile-sm {
+      font-size: 1.6rem;
+    }
   }
   h3 {
     font-size: 1.1rem;
     color: rgba(@gray, 0.8);
     line-height: 1.5;
+    @media @mobile {
+      font-size: 1rem;
+    }
+    @media @mobile-sm {
+      font-size: 0.9rem;
+    }
   }
 }
