--- a/css/block/beast__feature.less
+++ b/css/block/beast__feature.less
@@ -13,9 +13,10 @@
   -webkit-box-align: center;
   align-items: center;
   height: 590px;
-  @media @mobile-sm{
+  @media @mobile-sm {
     padding: 0.5rem;
     flex-wrap: wrap;
+    -webkit-box-align: start;
     align-items: flex-start;
   }
 }
@@ -28,10 +29,10 @@
   width: 25%;
   -webkit-box-align: center;
   align-items: center;
-  @media @mobile-sm{
+  @media @mobile-sm {
     width: 100%;
     margin-bottom: 1rem;
-    &:last-child{
+    &:last-child {
       margin-bottom: 0;
     }
   }
@@ -39,9 +40,9 @@
     color: @white;
     font-size: 4rem;
     margin-bottom: 2rem;
-    @media @mobile-sm{
-        font-size: 2rem;
-        margin-bottom: 0.5rem;
+    @media @mobile-sm {
+      font-size: 2rem;
+      margin-bottom: 0.5rem;
     }
   }
   h5 {
@@ -50,27 +51,27 @@
     font-size: 3rem;
     color: @white;
     margin-bottom: 1rem;
-    @media @mobile-sm{
+    @media @mobile-sm {
       font-size: 2rem;
       margin-bottom: 0.5rem;
-  }
+    }
   }
   span {
     width: 4rem;
     height: 3px;
     background-color: @white;
     margin-bottom: 1rem;
-    @media @mobile-sm{
+    @media @mobile-sm {
       width: 3rem;
       margin-bottom: 0.5rem;
-  }
+    }
   }
   p {
     font-size: 1.5rem;
     color: @white;
     font-weight: 400;
-    @media @mobile-sm{
+    @media @mobile-sm {
       font-size: 1.1rem;
-  }
+    }
   }
 }
