--- a/css/block/we__work.less
+++ b/css/block/we__work.less
@@ -5,6 +5,12 @@
   display: flex;
   -webkit-box-pack: justify;
   justify-content: space-between;
+  @media @tablet {
+    margin: 2rem 0;
+    -webkit-box-pack: center;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
 }
 .colum__left {
   width: 60%;
@@ -13,6 +19,10 @@
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
   flex-direction: column;
+  @media @tablet {
+    width: 100%;
+    margin-bottom: 1rem;
+  }
 }
 .colum__left--header {
   h2 {
@@ -22,6 +32,12 @@
     font-weight: 700;
     line-height: 1.2;
     margin-bottom: 1rem;
+    @media @tablet {
+      font-size: 3rem;
+    }
+    @media @mobile {
+      font-size: 2rem;
+    }
   }
   h3 {
     font-size: 1.1rem;
@@ -44,12 +60,19 @@
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
   flex-direction: column;
+  @media @mobile {
+    width: 45%;
+  }
   h4 {
     margin-top: 2rem;
     font-size: 1.8rem;
     font-family: @monserat;
     font-weight: 400;
     color: @gray;
+    @media @mobile-sm {
+      margin-top: 1rem;
+      font-size: 1.1rem;
+    }
   }
   p {
     font-size: 1.1rem;
@@ -58,6 +81,9 @@
     color: @blue;
     line-height: 1.875;
     margin-bottom: 1rem;
+    @media @mobile-sm {
+      font-size: 0.7rem;
+    }
   }
   span {
     margin-top: 1.5rem;
@@ -65,6 +91,10 @@
     font-weight: 500;
     line-height: 1.5;
     color: rgba(@gray, 0.8);
+    @media @mobile-sm {
+      font-size: 0.7rem;
+      margin-top: 0.5rem;
+    }
   }
 }
 .colum__right {
@@ -74,6 +104,9 @@
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
   flex-direction: column;
+  @media @tablet {
+    width: 100%;
+  }
   h2 {
     font-size: 4rem;
     font-family: @monserat;
@@ -81,6 +114,12 @@
     font-weight: 700;
     line-height: 1.2;
     margin-bottom: 1rem;
+    @media @tablet {
+      font-size: 3rem;
+    }
+    @media @mobile {
+      font-size: 2rem;
+    }
   }
   h3 {
     font-size: 1.1rem;
@@ -92,7 +131,12 @@
 .right__acardeon {
   list-style: none;
   padding: 0;
+
   margin-top: 3rem;
+  @media @tablet {
+    margin: 0;
+    margin-top: 1rem;
+  }
 }
 .acardeon__content {
   width: 100%;
