--- a/css/help.less
+++ b/css/help.less
@@ -13,16 +13,16 @@
 .text__center {
   text-align: center;
 }
-.text__bold{
+.text__bold {
   color: @gray;
   font-weight: 700;
 }
 .mt-6 {
   margin-top: 6rem;
-  @media @tablet{
+  @media @tablet {
     margin-top: 4rem;
   }
-  @media @mobile{
+  @media @mobile {
     margin-top: 2rem;
   }
 }
@@ -31,6 +31,9 @@
 }
 .mt-4 {
   margin-top: 4rem;
+  @media @mobile {
+    margin-top: 2rem;
+  }
 }
 .mt-3 {
   margin-top: 3rem;
