--- a/css/block/our__services.less
+++ b/css/block/our__services.less
@@ -10,6 +10,9 @@
   justify-content: space-between;
   -webkit-box-align: start;
   align-items: flex-start;
+  @media @tablet {
+    margin-top: 2rem;
+  }
 }
 .our__sevices__colum {
   width: 30%;
@@ -22,6 +25,17 @@
   align-items: center;
   text-align: center;
   margin-bottom: 3rem;
+  @media @tablet {
+    width: 50%;
+    padding: 0 1.5rem;
+  }
+  @media @mobile-sm {
+    width: 100%;
+    padding: 0;
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
   i {
     color: @blue;
     font-size: 2.5rem;
