--- a/css/block/team.less
+++ b/css/block/team.less
@@ -6,6 +6,12 @@
   -webkit-box-align: center;
   align-items: center;
   justify-content: space-around;
+  @media @tablet {
+    margin: 1rem 0;
+    -webkit-box-pack: center;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
 }
 .team__colum {
   display: -webkit-box;
@@ -17,6 +23,17 @@
   -webkit-box-align: center;
   align-items: center;
   position: relative;
+  @media @tablet {
+    width: 35%;
+    margin: 1rem;
+  }
+  @media @mobile {
+    width: 50%;
+  }
+  @media @mobile-sm {
+    width: 100%;
+    margin: 1rem 0;
+  }
   img {
     border-radius: 50%;
     opacity: 0.7;
@@ -30,6 +47,9 @@
     color: @gray;
     line-height: 1.2;
     margin-top: 1rem;
+    @media @notebook {
+      font-size: 1.5rem;
+    }
   }
   p {
     font-weight: 400;
@@ -37,6 +57,9 @@
     font-family: @monserat;
     color: rgba(@gray, 0.8);
     margin-top: 1rem;
+    @media @notebook {
+      font-size: 1.2rem;
+    }
   }
   &:hover {
     img {
@@ -51,6 +74,7 @@
   position: absolute;
   top: 30%;
   visibility: hidden;
+  -webkit-transition: visibility 0.1s ease-in-out;
   transition: visibility 0.1s ease-in-out;
   a {
     display: block;
@@ -60,11 +84,13 @@
     text-align: center;
     background: @white;
     line-height: 50px;
+    -webkit-transition: background 0.3s ease-in-out, border 0.3s ease-in-out;
     transition: background 0.3s ease-in-out, border 0.3s ease-in-out;
     i {
       color: @blue;
       text-decoration: none;
       font-size: 1.5rem;
+      -webkit-transition: color 0.3s ease-in-out;
       transition: color 0.3s ease-in-out;
     }
   }
