--- a/css/block/footer.less
+++ b/css/block/footer.less
@@ -11,6 +11,11 @@
   -webkit-box-align: start;
   align-items: flex-start;
   padding-top: 3rem;
+  @media @notebook {
+    -webkit-box-pack: center;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
 }
 .footer__colum {
   display: -webkit-box;
@@ -25,6 +30,25 @@
     color: @white;
     font-weight: 700;
     margin-bottom: 1.5rem;
+  }
+  @media @notebook {
+    width: 35%;
+    margin-bottom: 1.5rem;
+  }
+  @media @tablet {
+    width: 50%;
+  }
+  @media @mobile {
+    width: 60%;
+    &:last-child {
+      margin-bottom: 0;
+    }
+    &--services {
+      display: none;
+    }
+  }
+  @media @mobile-sm {
+    width: 100%;
   }
 }
 .colum__contact {
@@ -128,6 +152,10 @@
   align-items: center;
   -webkit-box-pack: start;
   justify-content: flex-start;
+  @media @mobile {
+    margin-top: 2rem;
+    padding-bottom: 2rem;
+  }
   a {
     margin: 0 1rem;
     width: 3rem;
@@ -141,12 +169,23 @@
       background-color 0.3s ease-in-out;
     -webkit-transition: box-shadow 0.3s ease-in-out,
       background-color 0.3s ease-in-out;
+    -webkit-transition: box-shadow 0.3s ease-in-out,
+      background-color 0.3s ease-in-out;
     transition: box-shadow 0.3s ease-in-out, background-color 0.3s ease-in-out;
+    @media @mobile-sm {
+      width: 2rem;
+      height: 2rem;
+      margin: 0 0.5rem;
+      line-height: 35px;
+    }
     i {
       color: @white;
       font-size: 1.3rem;
       -webkit-transition: color 0.3s ease-in-out;
       transition: color 0.3s ease-in-out;
+      @media @mobile-sm {
+        font-size: 1rem;
+      }
     }
     &:hover {
       background-color: @white;
@@ -172,5 +211,11 @@
     font-size: 1.1rem;
     font-weight: 400;
     font-family: @monserat;
+    @media @mobile {
+      font-size: 1rem;
+    }
+    @media @mobile-sm {
+      font-size: 0.7rem;
+    }
   }
 }
