--- a/css/block/back__top.less
+++ b/css/block/back__top.less
@@ -25,6 +25,14 @@
   justify-content: center;
   -webkit-transition: opacity 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
   transition: opacity 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+  @media @tablet {
+    right: 4%;
+    width: 2rem;
+    height: 2rem;
+  }
+  @media @mobile-sm {
+    right: 5%;
+  }
   span {
     width: 1rem;
     height: 1rem;
@@ -36,6 +44,10 @@
     margin-top: 0.5rem;
     -webkit-transition: opacity 0.3s ease-in-out;
     transition: opacity 0.3s ease-in-out;
+    @media @mobile {
+      width: 0.8rem;
+      height: 0.8rem;
+    }
   }
   &:hover {
     cursor: pointer;
