add media to contact page & fixed bags to chrome and opera

--- a/css/block/burger__button.less
+++ b/css/block/burger__button.less
@@ -14,6 +14,8 @@
   position: relative;
   -webkit-transition: background-color 0.3s ease-in-out,
     box-shadow 0.3s ease-in-out;
+  -webkit-transition: background-color 0.3s ease-in-out,
+    box-shadow 0.3s ease-in-out;
   transition: background-color 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
   span {
     position: absolute;
@@ -39,6 +41,7 @@
     }
   }
   @media @tablet {
+    display: -webkit-box;
     display: flex;
   }
 }
