--- a/css/block/intro.less
+++ b/css/block/intro.less
@@ -17,10 +17,12 @@
   }
   @media @tablet {
     width: 55%;
+    left: 2%;
   }
   @media @mobile {
     width: 60%;
     top: 5%;
+    left: 0;
   }
   @media @mobile-sm {
     width: 100%;
