--- a/css/block/services.less
+++ b/css/block/services.less
@@ -8,7 +8,7 @@
     height: 18rem;
   }
   @media @mobile-sm {
-    height: 12rem;
+    height: 13rem;
   }
 }
 .services__colum {
@@ -20,8 +20,6 @@
   flex-direction: column;
   -webkit-box-pack: center;
   justify-content: center;
-  -webkit-box-align: center;
-  align-items: center;
   padding: 0 2rem;
   text-align: center;
   -webkit-transition: background-color 0.3s ease-in-out;
@@ -47,6 +45,7 @@
     background-color: #37c3a8;
   }
   span {
+    margin: 0 auto;
     width: 3rem;
     height: 3rem;
     background-color: @white;
