--- a/css/block/we__work.less
+++ b/css/block/we__work.less
@@ -63,6 +63,21 @@
   @media @mobile {
     width: 45%;
   }
+  img{
+    max-height: 20rem;
+    @media @notebook{
+      max-height: 18rem;
+    }
+    @media @tablet{
+      max-height: 16rem;
+    }
+    @media @mobile{
+      max-height: 12rem;
+    }
+    @media @mobile-sm{
+      max-height: 8rem;
+    }
+  }
   h4 {
     margin-top: 2rem;
     font-size: 1.8rem;
