--- a/css/block/footer.less
+++ b/css/block/footer.less
@@ -110,7 +110,7 @@
 }
 .form__colum {
   input {
-    margin-bottom: 1rem;
+    margin-bottom: 0.5rem;
     width: 100%;
     height: 2rem;
     background: transparent;
@@ -127,7 +127,7 @@
   }
   textarea {
     resize: none;
-    margin-bottom: 1rem;
+    margin-bottom: 0.5rem;
     width: 100%;
     height: 4rem;
     background: transparent;
@@ -142,6 +142,13 @@
       border-bottom: 2px solid rgba(@white, 1);
     }
   }
+}
+#erorMesag{
+  font-family: @monserat;
+  font-weight: 600;
+  color: @green;
+  font-size: 1rem;
+  margin-top: 0.5rem;
 }
 .footer__social {
   margin-top: 3rem;
