--- a/css/vars.less
+++ b/css/vars.less
@@ -15,6 +15,6 @@
 @tablet: ~"(max-width:991px)";
 @notebook: ~"(max-width:1199px)";
 @lcd: ~"(max-width:1399px)";
-/*media heigh brackpoint*/
+/*media height brackpoint*/
 @notebook-h: ~"(max-height:790px)";
 @mobile-h: ~"(max-height: 620px)";
